[tool.poetry]
name = "nonebot-plugin-mcping"
version = "0.0.6"
description = "基于NoneBot的查询MineCraft服务器Motd并返回图片的插件"
authors = ["17TheWord <17theword@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.3.3"
mcstatus = "^11.1.1"
pillow = "^10.4.0"
nonebot-adapter-onebot = "^2.4.4"
nonebot-plugin-guild-patch-remix = "^0.2.4"
nonebot-adapter-qq = "^1.5.1"

[tool.poetry.group.test.dependencies]
ruff = "^0.4.5"
isort = "^5.10.1"
nonebug = "^0.3.5"
pytest-cov = "^4.0.0"
pre-commit = "^3.7.0"
pytest-asyncio = "^0.23.0"
nonebot2 = { version = "^2.3.3", extras = ["fastapi"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
